<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Backgrounds"
        android:icon="@drawable/ic_baseline_broken_image_24"
        android:title="@string/backgrounds" />
    <item
        android:id="@+id/Fashion"
        android:icon="@drawable/ic_baseline_style_24"
        android:title="@string/fashion" />
    <item
        android:id="@+id/Nature"
        android:icon="@drawable/ic_baseline_nature_24"
        android:title="@string/nature" />
    <item
        android:id="@+id/Science"
        android:icon="@drawable/ic_baseline_science_24"
        android:title="@string/science" />
    <item
        android:id="@+id/Education"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/education" />
    <item
        android:id="@+id/Feelings"
        android:icon="@drawable/ic_baseline_insert_emoticon_24"
        android:title="@string/feelings" />
    <item
        android:id="@+id/Health"
        android:icon="@drawable/ic_baseline_health_and_safety_24"
        android:title="@string/health" />
    <item
        android:id="@+id/People"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/people" />
    <item
        android:id="@+id/Religion"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/religion" />
    <item
        android:id="@+id/Places"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="@string/places" />
    <item
        android:id="@+id/Animals"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/animals" />
    <item
        android:id="@+id/Industry"
        android:icon="@drawable/ic_baseline_anchor_24"
        android:title="@string/industry" />
    <item
        android:id="@+id/Computer"
        android:icon="@drawable/ic_baseline_computer_24"
        android:title="@string/computer" />
    <item
        android:id="@+id/Food"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/food" />
    <item
        android:id="@+id/Sports"
        android:icon="@drawable/ic_baseline_sports_24"
        android:title="@string/sports" />
    <item
        android:id="@+id/Transportation"
        android:icon="@drawable/ic_baseline_emoji_transportation_24"
        android:title="@string/transportation" />
    <item
        android:id="@+id/Travel"
        android:icon="@drawable/ic_baseline_card_travel_24"
        android:title="@string/travel" />
    <item
        android:id="@+id/Buildings"
        android:icon="@drawable/ic_baseline_apartment_24"
        android:title="@string/buildings" />
    <item
        android:id="@+id/Business"
        android:icon="@drawable/ic_baseline_business_24"
        android:title="@string/business" />
    <item
        android:id="@+id/Music"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/music" />

</menu>
